kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ledgr
  labels:
    name: ledgr
    environment: production
